# M-SCAN

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_tutorial.sh
M-SCAN_figure_source_data/Fig2_source_data/: Figure2E_cell_line_spearman.csv  Figure_2A_cellline_model_step_spearman.csv  Figure_2B_cellline_M-SCAN_vs_ecGEM_spearman.csv  Figure_2C_measured_vs_predicted_flux_points.csv  Figure_2D_chronos_biomass_retention_values.csv
M-SCAN_figure_source_data/Fig3_source_data/: Figure3_A_all_samples_umap_coords.csv  Figure3_B_kidney_umap_coords.csv  Figure3_B_kidney_umap_permanova_permdisp_permdisp_centroid_distance_summary.csv  Figure3_B_kidney_umap_permanova_permdisp_stats.csv  Figure3_C_colorectal_umap_coords.csv  Figure3_D_major_pathway_rna_fluxsum_spearman_heatmap.csv  Figure3_E_LUAD_glycolysis_core_zscore25_mutation_vs_nomutation_stats.csv  Figure3_F_CMS3_vs_others_stats.csv
M-SCAN_figure_source_data/Fig4_source_data/: Figure4B_classification_performance.csv  Figure4C_delta_flux_top20_support.csv  Figure4C_pathway_recurrence_200runs.csv  Figure4D_cancerwise_pathway_support.csv  Figure4E_reaction_class_counts.csv  Figure4F_biomarker_drug_target_scores_all_reactions.csv
configs/: demo_ccle.yaml
data/media/: cell_media.csv
docs/: input_format.md  step_by_step.md
mscan/: __init__.py  cli.py  config.py  workflow.py
scripts/: mscan_apply_mutations.py  mscan_build_vmax.py  mscan_check_pfba.py  mscan_check_vmax.py  mscan_gpr.py  mscan_prepare_ccle_rna.py  mscan_prepare_gene_matrix.py  mscan_run_pfba.py  run_mscan_pipeline.py
(+13 files in other folders)
